--- a/package.json
+++ b/package.json
@@ -50,5 +50,13 @@
     "workerDirectory": [
       "public"
     ]
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ],
+    "**/*.{json,md,css}": [
+      "prettier --write"
+    ]
   }
 }
