Feat: 공통 컴포넌트 404 notFound 페이지 구현 #6

--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     ]
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "/*.{js,jsx,ts,tsx}": [
       "eslint --fix"
     ],
-    "**/*.{json,md,css}": [
+    "/*.{json,md,css}": [
       "prettier --write"
     ]
   }
