--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.67.0",
     "react-router": "^7.6.2",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
