--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.24",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.515.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
