--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.515.0",
