--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
+    "event-source-polyfill": "^1.0.31",
     "framer-motion": "^12.23.24",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.515.0",
@@ -25,6 +26,7 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.67.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.10",
